# nats-discovery.rs

./: Cargo.toml  README.md
registry/: Cargo.toml  build.rs
registry/protos/: registry.proto
registry/src/: client.rs  discovery.rs  lib.rs  utils.rs
src/: main.rs
tests/: client.rs  nats_server_started.rs
