[package]
build = "build.rs"
edition = "2021"
name = "registry"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
chrono = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4.14"
nats = "0.20"
protobuf = "3.0.2"
rand = "0.8"
time = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["full"]}

[build-dependencies]
protobuf-codegen = "3.0.2"

[dev-dependencies]
serde_json = "1.0"
toml = "0.5"
